- NavBar no longer fixed - was causing layout issues.

--- a/src/css/UserHomepage.css
+++ b/src/css/UserHomepage.css
@@ -1,3 +1,6 @@
+#user-homepage-main-container {
+    background: #fae596;
+}
 
 #header-section {
     background: #3fb0ac;
