--- a/src/css/userProfilePage.css
+++ b/src/css/userProfilePage.css
@@ -31,7 +31,7 @@ html {
     opacity: 0.2;
 }
 #image-col .text{
-    position: absolute;;
+    position: absolute;
     bottom:80px;
     left:110px;
     color:black;
